tests/negative/Internal/LazyBuiltin.juvix
module LazyBuiltin;

builtin bool
type Bool :=
  | true : Bool
  | false : Bool;

builtin bool-if
if : {A : Type} -> Bool -> A -> A -> A;
if true x _ := x;
if false _ x := x;

f : Bool -> Bool;
f x := if x;

